--- a/config/config.yml
+++ b/config/config.yml
@@ -1,6 +1,6 @@
 params:
   model: 'resnet50'
-  model_path: 'models/modelV2.pth'
+  model_path: '../../models/modelV2.pth'
   batch_size: 32
   train_data_path: 'data/train'
   test_data_path: 'data/test'
