--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 params:
-  model: 'resnet50'
+  model: 'efficientnet-b0'
   model_path: '../../models/modelV2.pth'
   batch_size: 32
   train_data_path: 'data/train'
