--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,18 @@
-# local package
--e .
 
-# external requirements
 click
-Sphinx~=5.0.2
 coverage
-awscli
-flake8
-python-dotenv>=0.5.1
-yaml~=0.2.5
 pyyaml~=6.0
 tqdm~=4.65.0
-torch
-torchvision~=0.15.2
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torch==2.0.1+cpu
+--find-links https://download.pytorch.org/whl/torch_stable.html
+torchvision==0.15.2+cpu
 matplotlib~=3.7.1
 setuptools~=65.6.3
 wandb
 tox
+fastapi
+uvicorn
 pillow~=9.4.0
 dvc
+python-multipart
